bug fix for modal formatting on tablets

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,7 +13,7 @@ body
 	color: white;
 	font-weight: 200;
 	-webkit-user-select: none;  /* Chrome all / Safari all */
-  	-moz-user-select: none;     /* Firefox all */
+  -moz-user-select: none;     /* Firefox all */
 	-ms-user-select: none;      /* IE 10+ */
 	
 	/* This was causing problems clipping popup modal windows */
@@ -653,10 +653,6 @@ a {
 	.zoom_wrapper {
 		top: 40px;
 	} 
-	.modal{
-		margin: auto;
-		width: 75%;
-	}
 	.midsize {
 		font-size: 14pt;
 	}
